--- a/School.Web/Views/Employee/Index.cshtml
+++ b/School.Web/Views/Employee/Index.cshtml
@@ -239,17 +239,17 @@
             <!-- Filter Section -->
             <div class="filter-section">
                 <div class="row g-3 align-items-end">
-                    <div class="col-md-3">
+                    <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                         <label for="searchName" class="form-label">Search</label>
                         <input type="text" class="form-control" id="searchName" placeholder="Search by name, code, CNIC..." />
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-lg-2 col-md-4 col-sm-6 col-12">
                         <label for="filterDesignation" class="form-label">Designation</label>
                         <select class="form-select" id="filterDesignation">
                             <option value="">All Designations</option>
                         </select>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-lg-2 col-md-4 col-sm-6 col-12">
                         <label for="filterStatus" class="form-label">Status</label>
                         <select class="form-select" id="filterStatus">
                             <option value="">All Status</option>
@@ -257,7 +257,7 @@
                             <option value="false">Inactive</option>
                         </select>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-lg-2 col-md-4 col-sm-6 col-12">
                         <button type="button" class="btn btn-primary" onclick="loadEmployees()">
                             <i class="bi bi-search me-1"></i> Search
                         </button>
