--- a/School.Web/Views/FeeVoucher/Form.cshtml
+++ b/School.Web/Views/FeeVoucher/Form.cshtml
@@ -164,6 +164,18 @@
         max-height: 300px;
         overflow-y: auto;
     }
+
+    @@media (max-width: 991px) {
+        .fee-table-container {
+            max-height: 200px;
+        }
+    }
+
+    @@media (max-width: 767px) {
+        .fee-table-container {
+            max-height: 150px;
+        }
+    }
 </style>
 
 <div class="container-fluid">
@@ -237,7 +249,7 @@
                 <!-- Main Content: Two Panels -->
                 <div class="row">
                     <!-- Left Panel: Pay Fee(s) -->
-                    <div class="col-md-6">
+                    <div class="col-lg-6 col-12">
                         <div class="section-box">
                             <div class="section-title">
                                 <i class="bi bi-person-fill me-2"></i>Pay Fee(s)
@@ -304,7 +316,7 @@
                     </div>
 
                     <!-- Right Panel: Choose Fee(s) -->
-                    <div class="col-md-6">
+                    <div class="col-lg-6 col-12">
                         <div class="section-box">
                             <div class="section-title">
                                 <i class="bi bi-list-check me-2"></i>Choose Fee(s)
@@ -335,19 +347,19 @@
                 <!-- Footer Section -->
                 <div class="footer-section">
                     <div class="row g-3 align-items-end">
-                        <div class="col-md-2">
+                        <div class="col-lg-2 col-md-4 col-sm-6 col-12">
                             <label class="form-label">Amount</label>
                             <input type="number" class="form-control" id="totalAmount" readonly value="0.00" />
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-lg-2 col-md-4 col-sm-6 col-12">
                             <label class="form-label">Paid <span class="text-danger">*</span></label>
                             <input type="number" class="form-control" id="paidAmount" step="0.01" value="0.00" onchange="calculateChange()" />
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-lg-3 col-md-6 col-12">
                             <label class="form-label">Description</label>
                             <input type="text" class="form-control" id="description" placeholder="Payment description" />
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-lg-2 col-md-4 col-sm-6 col-12">
                             <label class="form-label">Printer</label>
                             <div class="radio-group">
                                 <div class="form-check">
@@ -360,7 +372,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-lg-2 col-md-4 col-sm-6 col-12">
                             <div class="form-check mt-4">
                                 <input class="form-check-input" type="checkbox" id="sendMessage">
                                 <label class="form-check-label" for="sendMessage">Send Message</label>
