--- a/School.Web/Views/StaffSubjects/Index.cshtml
+++ b/School.Web/Views/StaffSubjects/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="form-section mb-4">
             <h6 class="mb-3">Select Staff Member</h6>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-6 col-12">
                     <label for="staffMemberId" class="form-label">Staff Member <span class="text-danger">*</span></label>
                     <select class="form-select" id="staffMemberId" required>
                         <option value="">-- Select Staff Member --</option>
@@ -24,25 +24,25 @@
         <div class="form-section mb-4">
             <h6 class="mb-3">Add Subject Assignment</h6>
             <div class="row g-3 align-items-end">
-                <div class="col-md-2">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-12">
                     <label for="classId" class="form-label">Class <span class="text-danger">*</span></label>
                     <select class="form-select" id="classId" required onchange="loadSections()">
                         <option value="">-- Select Class --</option>
                     </select>
                 </div>
-                <div class="col-md-2">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-12">
                     <label for="sectionId" class="form-label">Section <span class="text-danger">*</span></label>
                     <select class="form-select" id="sectionId" required disabled>
                         <option value="">-- Select Section --</option>
                     </select>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                     <label for="subjectId" class="form-label">Subject <span class="text-danger">*</span></label>
                     <select class="form-select" id="subjectId" required>
                         <option value="">-- Select Subject --</option>
                     </select>
                 </div>
-                <div class="col-md-2">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-12">
                     <label for="lectureNo" class="form-label">Lecture No <span class="text-danger">*</span></label>
                     <select class="form-select" id="lectureNo" required>
                         <option value="">-- Select --</option>
@@ -56,7 +56,7 @@
                         <option value="8">8</option>
                     </select>
                 </div>
-                <div class="col-md-2">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-12">
                     <button type="button" class="btn btn-primary w-100" id="btnAddAssignment" onclick="addAssignment()" disabled>
                         <i class="bi bi-plus-lg me-1"></i> Add
                     </button>
